Aligned items, fixed problems with padding etc

--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a {
     background-color: #1f2937;
     color: white;
     justify-content: center;
+    padding: 80px;
 }
 
 .text1 {
@@ -55,7 +56,6 @@ a {
 
 .info {
     max-width: 200px;
-    border-radius: 50%;
 }
 
 .middle {
@@ -72,4 +72,35 @@ a {
 
 .text {
     max-width: 100px;
+}
+
+.quote {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 36px;
+    font-style: italic;
+    background-color: #e5e7eb;
+    padding: 80px;
+}
+
+.call {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    background-color: #3882f6;
+    margin: 100px;
+    color: white;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #1f2937;
+    color: white;
+    padding: 48px;
 }
